--- a/VulApp/Views/Home/Index.cshtml
+++ b/VulApp/Views/Home/Index.cshtml
@@ -1,8 +1,19 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿@using Entidades
+@model Usuario
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://learn.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <title>Index</title>
+</head>
+<body>
+    <h1>Nombre: @Model.Nombre</h1>
+    <h1>Apellidos: @Model.Celular</h1>
+    <h1>Parametro: @ViewData["id"]</h1>
+    <div class="text-center">
+        @Html.Raw(@Model.Nombre)
+    </div>
+</body>
+</html>
+
